<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add"
    android:textAlignment="center"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="477dp"
            android:layout_height="911dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="297dp"
            android:layout_height="47dp"
            android:layout_marginTop="48dp"
            android:text="Select Date, Time"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- New TextView to Display Selected Date -->

        <Button
            android:id="@+id/button2"
            android:layout_width="208dp"
            android:layout_height="52dp"
            android:text="@string/Save"
            android:textStyle="bold"
            android:backgroundTint="@color/dark_Blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectedTime" />

        <Button
            android:id="@+id/buttonPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:text="Pick_Date"
            android:backgroundTint="@color/dark_Blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- New Button for Time Picker -->

        <!-- New TextView to Display Selected Time -->

        <TextView
            android:id="@+id/textViewSelectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/Selected_Date"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPickDate" />

        <Button
            android:id="@+id/buttonPickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/dark_Blue"
            android:text="@string/Pick_Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPickDate" />

        <TextView
            android:id="@+id/textViewSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Selected_Time"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonPickTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>