<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:id="@+id/main"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="10dp">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_back" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="@id/ivBack" />
            </LinearLayout>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

        </LinearLayout>
        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hi Shani,"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!-- Search Bar -->
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="Find your best cake"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="center"
            android:focusable="false"
            android:textColor="@color/black" />


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp">


            <!-- Tab Layout -->
            <LinearLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Tabs (Example for one, you can add more similarly) -->
                <TextView
                    android:id="@+id/tab1"
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:text="@string/chocolate_icing_cake"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tab2"
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_background1"
                    android:text="@string/birthday_icing_cake"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tab3"
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/rounded_edittext_background1"
                    android:padding="8dp"
                    android:text="@string/pound_icing_cake"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tab4"
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:padding="8dp"
                    android:background="@drawable/rounded_edittext_background1"
                    android:text="@string/butter_cake"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </HorizontalScrollView>

        <!-- First Cake Image -->

        <LinearLayout
            android:id="@+id/tab_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tab_layout3"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cake_image5" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/chocolate_cheesecake"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_layout4"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:orientation="vertical">
                <!-- Second Cake Image -->
                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cake_image6" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lavacake"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tab_layout6"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cake_image7" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/chocolate_mousse_cake"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_layout7"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cake_image8" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Chocolate Mousse Cake"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_layout8"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <ImageView
                android:id="@+id/butn"
                android:layout_width="390dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img" />

    </LinearLayout>


    </LinearLayout>




</ScrollView>

