<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ContentActivity">

    <!-- Back Button -->

    <!-- Label Text -->

    <ImageView
        android:id="@+id/cakeImage"
        android:layout_width="209dp"
        android:layout_height="225dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_background"
        android:scaleType="centerCrop"
        android:src="@drawable/cake_image5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />



    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cakeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="Chocolate Cheesecake"
        android:textColor="@color/dark_Blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cakeImage" />

    <TextView
        android:id="@+id/cakeDescription"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/para3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cakeTitle" />

    <LinearLayout
        android:id="@+id/ratingPriceContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cakeDescription">

        <!-- Rating Star -->

        <!-- Rating Value -->

        <!-- Price -->
    </LinearLayout>

    <TextView
        android:id="@+id/sizeText"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="Size"
        android:textColor="@color/dark_Blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingPriceContainer" />

    <LinearLayout
        android:id="@+id/sizeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeText">

        <!-- Size Buttons -->
        <Button
            android:id="@+id/sizeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:text="S"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sizeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:text="M"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sizeLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="L"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="294dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="Description"
        android:textColor="@color/dark_Blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeContainer" />

    <TextView
        android:id="@+id/descriptionValue"
        android:layout_width="344dp"
        android:layout_height="36dp"
        android:text="@string/para2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />


    <Button
        android:id="@+id/conti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/dark_Blue"
        android:text="Continue"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addExtra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/dark_Blue"
        android:text="Add Extra"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="$3.80"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sizeContainer"
        app:layout_constraintEnd_toStartOf="@+id/ratingPriceContainer"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/tab_layout9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout10"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/category"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_category" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout11"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fav" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout12"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>